# qemu-avr32

./: README.rst
configs/devices/avr32-softmmu/: default.mak
configs/targets/: avr32-softmmu.mak
gdb-xml/: avr32a-cpu.xml
hw/: Kconfig  meson.build
hw/avr32/: Kconfig  at32uc3.c  at32uc3.h  at32uc3_adcifa.c  at32uc3_adcifa.h  at32uc3_can.c  at32uc3_can.h  at32uc3_gpioc.c  at32uc3_gpioc.h  at32uc3_intc.c  at32uc3_intc.h  at32uc3_pdca.c  at32uc3_pdca.h  at32uc3_scif.c  at32uc3_scif.h  at32uc3_sdramc.c  at32uc3_sdramc.h  at32uc3_twim.c  at32uc3_twim.h  at32uc3_twis.c  at32uc3_twis.h  at32uc3_uart.c  at32uc3_uart.h  at32uc3_wdt.c  at32uc3_wdt.h  avr32example_board.c  avr32exp.c  avr32exp.h  avr32uc.c  avr32uc.h  boot.c  boot.h  fm33256b.c  gssb_istage.c  hmc5843.c  htpa16x4.c  htpa16x4_eeprom.c  meson.build  mpu3300.c  nanocom_ax100.c  (+7 more)
hw/ssi/: Kconfig  at32uc3_spi.c  meson.build
hw/timer/: Kconfig  at32uc3_timer.c  at32uc3_timer.h  meson.build
include/: elf.h
include/disas/: dis-asm.h
include/hw/ssi/: at32uc3_spi.h
include/sysemu/: arch_init.h
