avr32_ss = ss.source_set()
avr32_ss.add(files('boot.c'))
avr32_ss.add(files('at32uc3.c'))
avr32_ss.add(files('avr32uc.c'))
avr32_ss.add(files('at32uc3_twim.c'))
avr32_ss.add(files('at32uc3_twis.c'))
avr32_ss.add(files('at32uc3_pdca.c'))
avr32_ss.add(files('at32uc3_adcifa.c'))
avr32_ss.add(files('at32uc3_uart.c'))
avr32_ss.add(files('at32uc3_can.c'))
avr32_ss.add(files('at32uc3_scif.c'))
avr32_ss.add(files('at32uc3_intc.c'))
avr32_ss.add(files('mpu3300.c'))
avr32_ss.add(files('hmc5843.c'))
avr32_ss.add(files('rm3100.c'))
avr32_ss.add(files('htpa16x4.c'))
avr32_ss.add(files('htpa16x4_eeprom.c'))
avr32_ss.add(files('gssb_istage.c'))
avr32_ss.add(files('fm33256b.c'))
avr32_ss.add(files('nanomind_a3200.c'))
avr32_ss.add(files('nanopower-p31u.c'))

hw_arch += {'avr32': avr32_ss}
